test/errors/index.ts
export { TestError } from './TestError'
export { EvaluationError } from './EvaluationError'
